clusters/vps/apps/traefik/traefik-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-secure
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    # Host must be correct and we need BOTH path prefixes
    match: Host(`traefik.nasson.co.za`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
    services:
    - name: api@internal
      kind: TraefikService
  tls: {}
